Rappi - Sr Operations Researcher - Data Scientist. Senior Data Scientist - YouVisit LLC - Career Page. Job Application for Data Scientist, Chemical & Medical Data Analysis at Osler Diagnostics. Yelp - Data Science Analyst. Senior Data Scientist - Saavn - Career Page. Criteo - Data Scientist. Job Application for Director of Analytics & Data Science at Unite Us. Job @ Solactive  (Dresden): Data Scientist (m/f/d) | JOIN.       Praktikant/Werkstudent Data Science/Machine Learning (w/m/d) - CYRES Consulting Services GmbH     . Job @ Vertical  Scale  (Berlin): Data Scientist In... | JOIN. Job @ Vertical  Scale  (Berlin): Data Scientist as... | JOIN. Biogen Data Scientist (Cambridge or RTP) | SmartRecruiters. Job Application for Data Science Instructor - Local Lead at General Assembly. Junior Data Scientist (Working Student m/f/d). Ubisoft Data Scientist (user research lab) | SmartRecruiters. Geotab - Data Scientist. Data Scientist - Actuarials - Roles at Sumner &amp; Scott. UNDP Jobs - 88288- Consultancy – Technical Expert, Data Scientist for. Verisk Senior Data Scientist | SmartRecruiters. Junior Data Scientist #0591 job at Stratus Solutions in Springfield, VA, powered by JobScore. Ubisoft Junior Data Scientist (M/F) | SmartRecruiters. Freedom Financial Network Careers - Contractor-Data Scientist. Data Scientist - Automotives | Averity. Bosch Group BCAI_Data Scientist | SmartRecruiters. SQL System Engineer | PROSTAFF – Swiss IT and Data Science Recruitment &amp; HR-Services. Senior Data Scientist - Akamai Careers. Job @ SO1 (Berlin): (Senior) Data Scientist (m/f/x) | JOIN. Data Scientist - NetImpact Strategies - Career Page. Data Science Sol Consultant - Anthem, Inc. Careers.       Data Scientist NLP (F/M/DIV) - Scorable     . Bosch Group Data Scientist – Deep Learning | SmartRecruiters. Upside - Data Science Business Analyst. Freedom Financial Network Careers - Senior Data Scientist. Data Science Analyst - Simpletire - Career Page. Guidewire Software, Inc. Careers - Dat

--- a/data-science.html
+++ b/data-science.html
@@ -133,7 +133,7 @@
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/geotab/95409765-4b84-479d-8f98-8f0639027786'>Geotab - Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/geotab/95409765-4b84-479d-8f98-8f0639027786'>Geotab - Data Scientist</a></h5> 
 <p><span class="badge badge-light">Canada  North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -157,7 +157,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ok3Oafw5&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nY8qpMwc'>Freedom Financial Network Careers - Contractor-Data Scientist</a></h5> 
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -165,7 +165,7 @@
 <p><span class="badge badge-light">New York, NY  NYC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698556175-bcai-data-scientist'>Bosch Group BCAI_Data Scientist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698556175-bcai-data-scientist'>Bosch Group BCAI_Data Scientist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -312,7 +312,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/niantic/jobs/4498726002'>Job Application for Data Scientist at Niantic</a></h5> 
+<h5><a href='https://boards.greenhouse.io/niantic/jobs/4498726002'>Job Application for Data Scientist at Niantic</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -328,7 +328,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wealthfront/b5735e2d-fb2e-4870-8383-f1702a8b124c'>Wealthfront - Data Scientist - Optimization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wealthfront/b5735e2d-fb2e-4870-8383-f1702a8b124c'>Wealthfront - Data Scientist - Optimization</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -340,7 +340,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/civisanalytics/jobs/1937557'>Job Application for Applied Data Scientist, Nonprofit at Civis Analytics</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -348,11 +348,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invision/jobs/1936086'>Job Application for Senior Data Scientist, Marketing at InVision</a></h5> 
+<h5><a href='https://boards.greenhouse.io/invision/jobs/1936086'>Job Application for Senior Data Scientist, Marketing at InVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vinted/ef6ffc0d-3162-4d33-9d8d-985bb7ae9140'>Vinted - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.lever.co/vinted/ef6ffc0d-3162-4d33-9d8d-985bb7ae9140'>Vinted - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Vilnius  Vilnius Berlin Prague Warsaw</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -376,7 +376,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4499209002'>Job Application for Data Scientist (Anti-Fraud Squad) at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4499209002'>Job Application for Data Scientist (Anti-Fraud Squad) at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -464,7 +464,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
+<h5><a href='https://gatesfoundation.wd1.myworkdayjobs.com/en-US/Gates/job/Seattle-WA/Data-Scientist--People-Analytics_B013988'>Data Scientist, People Analytics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Design and implement data science research projects that utilize advanced 
 statistical methods, such as regression analysis and machine learning, to 
