--- a/deep-learning.html
+++ b/deep-learning.html
@@ -142,7 +142,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4480804002'>Job Application for Deep Learning Engineer ? Samsung Ads AI Team at Samsung Research America</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -248,7 +248,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -430,7 +430,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
@@ -490,7 +490,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oSOMafwm'>The Climate Corporation Careers - Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
